refactor(physics): decouple engine from gravity calculation